feat: statistics
- added more statistics to the dashboard
